show updates and schedule in sorted order

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -12,7 +12,43 @@
         <div class="col-md-9 col-lg-10 ml-sm-auto pt-3" id="main-content">
             <div class="container">
                 <h1 class="display-4 py-3 heading-font">Schedule</h1>
-                <p class="updates-cards-time">Saturday, December 7</p>
+
+                <%if(arr.length > 0){ %>
+                <p class="updates-cards-time">Date other than saturday,11 and sunday, 12</p>
+                <div class="row">
+                    <div class="col-md-8">
+                        <% arr.forEach(schedule=>{ %>
+                        <div class="row">
+                            <h4 class="col-3 my-3 text-right">
+                                <%= schedule.startTime %>
+                            </h4>
+                            <div class="col-9">
+                                <div class="card my-3 updates-cards">
+                                    <div class="card-body">
+                                        <h4 class="heading-card heading-font"><%= schedule.title %></h4>
+                                        <div class="updates-cards-time">
+                                            <small>
+                                                <%= schedule.startTime %> - <%= schedule.endTime %>
+                                            </small>
+                                        </div>
+                                        <div class="my-2"><%= schedule.description %></div>
+                                        <div>
+                                            <small>
+                                                <i class="fas fa-map-marker-alt"></i>
+                                                <%= schedule.location %>
+                                            </small>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <% }) %>
+
+                    </div>
+                </div>
+                <%}%>
+
+                <p class="updates-cards-time">Saturday, December 11</p>
                 <div class="row">
                     <div class="col-md-8">
 
@@ -74,37 +110,72 @@
                         </div> -->
 
 
-                        <% schedule.forEach(schedule=>{ %>
-                        <div class="row">
-                            <h4 class="col-3 my-3 text-right">
-                                <%= schedule.startTime %>
-                            </h4>
-                            <div class="col-9">
-                                <div class="card my-3 updates-cards">
-                                    <div class="card-body">
-                                        <h4 class="heading-card heading-font"><%= schedule.title %></h4>
-                                        <div class="updates-cards-time">
-                                            <small>
-                                                <%= schedule.startTime %> - <%= schedule.endTime %>
-                                            </small>
-                                        </div>
-                                        <div class="my-2"><%= schedule.description %></div>
-                                        <div>
-                                            <small>
-                                                <i class="fas fa-map-marker-alt"></i>
-                                                <%= schedule.location %>
-                                            </small>
-                                        </div>
-                                    </div>
+
+
+                        <% arr11.forEach(schedule=>{ %>
+                <div class="row">
+                    <h4 class="col-3 my-3 text-right">
+                        <%= schedule.startTime %>
+                    </h4>
+                    <div class="col-9">
+                        <div class="card my-3 updates-cards">
+                            <div class="card-body">
+                                <h4 class="heading-card heading-font"><%= schedule.title %></h4>
+                                <div class="updates-cards-time">
+                                    <small>
+                                        <%= schedule.startTime %> - <%= schedule.endTime %>
+                                    </small>
+                                </div>
+                                <div class="my-2"><%= schedule.description %></div>
+                                <div>
+                                    <small>
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        <%= schedule.location %>
+                                    </small>
                                 </div>
                             </div>
                         </div>
-                        <% }) %>
                     </div>
                 </div>
+                <% }) %>
+            </div>
+        </div>
+
+        <p class="updates-cards-time">Sunday, December 12</p>
+        <div class="row">
+            <div class="col-md-8">
+                <% arr12.forEach(schedule=>{ %>
+                <div class="row">
+                    <h4 class="col-3 my-3 text-right">
+                        <%= schedule.startTime %>
+                    </h4>
+                    <div class="col-9">
+                        <div class="card my-3 updates-cards">
+                            <div class="card-body">
+                                <h4 class="heading-card heading-font"><%= schedule.title %></h4>
+                                <div class="updates-cards-time">
+                                    <small>
+                                        <%= schedule.startTime %> - <%= schedule.endTime %>
+                                    </small>
+                                </div>
+                                <div class="my-2"><%= schedule.description %></div>
+                                <div>
+                                    <small>
+                                        <i class="fas fa-map-marker-alt"></i>
+                                        <%= schedule.location %>
+                                    </small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <% }) %>
+
             </div>
         </div>
     </div>
+</div>
+</div>
 </div>
 
 <% include ./partials/footer.ejs %>
