--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,8 @@
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet" />
 
+    <script>var url = "https://cuhacking.com/api-dev/";</script>
+
     <title>Dashboard | cuHacking</title>
 </head>
 
