add more map data and fix profile qr codes

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
 
         <div class="col-md-9 col-lg-10 ml-sm-auto pt-3" id="main-content">
             <div class="container main-box">
-                <div class="row" id="login-box" style="display: none">
+                <div class="row py-3" id="login-box" style="display: none">
                     <div class="col-md-6 text-center">
                         <h4 class="my-4">Please Sign In to view your Profile!</h4>
                         <img src="/static/svg/Vector.svg" alt="" srcset="" class="my-4">
