--- a/views/info.ejs
+++ b/views/info.ejs
@@ -68,21 +68,30 @@
                         <div class="card mb-3">
                             <div class="card-body">
                                 <h4 class="heading-card heading-font mb-3"> Social</h4>
-                                <div class="card-text">
-                                    <a href="http://facebook.com/cuhacking" target="_blank"> <i
-                                            class="fab fa-facebook-square"></i>
-                                    </a>&nbsp;&nbsp;
-                                    <a href="http://instagram.com/cuHacking" target="_blank"> <i
-                                            class="fab fa-instagram"></i>
-                                    </a>&nbsp;&nbsp;
-                                    <a href="http://twittter.com/cuHacking" target="_blank"> <i
-                                            class="fab fa-twitter-square"></i>
-                                    </a>&nbsp;&nbsp;
+                                <div class="card-text" style="font-size: large;">
+                                    <table>
+                                        <tr>
+                                            <td style="width: 15rem;"><a style="color:#9756D8;"
+                                                    href=<%=info.social.slack%> target="_blank"> <i
+                                                        class="fab fa-slack"></i>
+                                                    &nbsp;&nbsp; Join Slack Here!</a>
+                                            </td>
+                                            <td><a style="color:#9756D8;" href="http://facebook.com/cuhacking"
+                                                    target="_blank"> <i class="fab fa-facebook-square"></i>
+                                                    &nbsp;&nbsp; Facebook</td></a>
+                                        </tr>
+                                        <tr>
+                                            <td><a style="color:#9756D8;" href="http://instagram.com/cuHacking"
+                                                    target="_blank"> <i class="fab fa-instagram"></i>
+                                                    &nbsp;&nbsp; Instagram</td></a>
+                                            <td><a style="color:#9756D8;" href="http://twittter.com/cuHacking"
+                                                    target="_blank"> <i class="fab fa-twitter-square"></i>
+                                                    &nbsp;&nbsp; Twitter</td> </a>
+                                        </tr>
+                                    </table>
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
