--- a/views/countdown.ejs
+++ b/views/countdown.ejs
@@ -31,7 +31,8 @@
                     <h1 class="heading-font">Don't forget to download the cuHacking App!</h1>
                 </div>
                 <div class="row bottom-2 justify-content-center">
-                    <a href="https://apps.apple.com/us/app/cuhacking/id1490263765?mt=8" target="_blank"><img src="/static/svg/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"
+                    <a href="https://apps.apple.com/us/app/cuhacking/id1490263765?mt=8" target="_blank"><img
+                            src="/static/svg/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg"
                             alt="app store downliad link" srcset=""></a>
                     <a href="https://play.google.com/store/apps/details?id=com.cuhacking.app&hl=en" target="_blank"><img
                             src="/static/svg/Google_Play_Store_badge_EN.svg" alt="google play download link"
