--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -60,6 +60,77 @@
                         <h4>
                             <%= schedule.startTime %>
                         </h4>
+                        <h6 class=" mt-auto event-type <%=schedule.type%>">
+                            <!-- <i class="fas fa-circle"></i> -->
+                            <%=schedule.type%> </h6>
+                    </div>
+                    <div class="col-9">
+                        <div class="card my-1 updates-cards <%=schedule.type%>">
+                            <a data-toggle="modal" href="#<%=schedule.id%>" class="schedule-moreinfo">
+
+                                <div class="card-body">
+                                    <div class="modal fade" id="<%=schedule.id%>" tabindex="-1" role="dialog"
+                                        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h5 class="modal-title" id="exampleModalLongTitle"
+                                                        style="font-weight: bold;"><%=schedule.title%>
+                                                    </h5>
+                                                    <div style="color: #5827b8;">
+                                                        Saturday <%= schedule.startTime %> - <%= schedule.endTime %> |
+                                                        <i class="fas fa-circle event-type <%=schedule.type%>"></i>
+                                                        <%=schedule.type%> </div>
+
+                                                    <%=schedule.description%><br>
+                                                    Location: <i class="fas fa-map-marker-alt"></i>
+                                                    <%= schedule.location %>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                        data-dismiss="modal">Close</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <h4 class="heading-card heading-font"><%= schedule.title %></h4>
+                                    <div class="updates-cards-time">
+                                        <div>
+                                            <%= schedule.startTime %> - <%= schedule.endTime %>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div>
+                                            <i class="fas fa-map-marker-alt"></i>
+                                            <%= schedule.location %>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <% }) %>
+            </div>
+        </div>
+
+        <p class="updates-cards-time">Sunday, December 12</p>
+        <div class="row">
+            <div class="col-md-7">
+                <% arr12.forEach(schedule=>{ %>
+                <div class="row">
+                    <div class="col-3 my-3 text-right d-flex flex-column">
+                        <h4>
+                            <%= schedule.startTime %>
+                        </h4>
                         <h6 class=" mt-auto event-type <%=schedule.type%>"><%=schedule.type%></h6>
                     </div>
                     <div class="col-9">
@@ -92,7 +163,6 @@
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary"
                                                         data-dismiss="modal">Close</button>
-                                                    <button type="button" class="btn btn-primary">See in Maps</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -117,75 +187,6 @@
                     </div>
                 </div>
                 <% }) %>
-            </div>
-        </div>
-
-        <p class="updates-cards-time">Sunday, December 12</p>
-        <div class="row">
-            <div class="col-md-7">
-                <% arr12.forEach(schedule=>{ %>
-                    <div class="row">
-                        <div class="col-3 my-3 text-right d-flex flex-column">
-                            <h4>
-                                <%= schedule.startTime %>
-                            </h4>
-                            <h6 class=" mt-auto event-type <%=schedule.type%>"><%=schedule.type%></h6>
-                        </div>
-                        <div class="col-9">
-                            <div class="card my-1 updates-cards <%=schedule.type%>">
-                                <a data-toggle="modal" href="#<%=schedule.id%>" class="schedule-moreinfo">
-    
-                                    <div class="card-body">
-                                        <div class="modal fade" id="<%=schedule.id%>" tabindex="-1" role="dialog"
-                                            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <button type="button" class="close" data-dismiss="modal"
-                                                            aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        <h5 class="modal-title" id="exampleModalLongTitle"
-                                                            style="font-weight: bold;"><%=schedule.title%>
-                                                        </h5>
-                                                        <div style="color: #5827b8;">
-                                                            Saturday <%= schedule.startTime %> - <%= schedule.endTime %> |
-                                                            <%=schedule.type%> </div>
-    
-                                                        <%=schedule.description%><br>
-                                                        Location: <i class="fas fa-map-marker-alt"></i>
-                                                        <%= schedule.location %>
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary"
-                                                            data-dismiss="modal">Close</button>
-                                                        <button type="button" class="btn btn-primary">See in Maps</button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-    
-                                        <h4 class="heading-card heading-font"><%= schedule.title %></h4>
-                                        <div class="updates-cards-time">
-                                            <div>
-                                                <%= schedule.startTime %> - <%= schedule.endTime %>
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <small>
-                                                <i class="fas fa-map-marker-alt"></i>
-                                                <%= schedule.location %>
-                                            </small>
-                                        </div>
-                                    </div>
-                                </a>
-    
-                            </div>
-                        </div>
-                    </div>
-                <% }) %>
 
             </div>
         </div>
@@ -193,5 +194,6 @@
 </div>
 </div>
 </div>
+
 
 <% include ./partials/footer.ejs %>
