Use the proper name for Safety Services
Whoops, messed up on the last commit

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -44,7 +44,7 @@
                                             <td>911</td>
                                         </tr>
                                         <tr>
-                                            <td>Carleton Security Services: </td>
+                                            <td>Campus Safety Services: </td>
                                             <td><%=info.emergency%></td>
                                         </tr>
                                         <tr>
